Dragging a asset from the asset browser while the thumbnail is still loading results in a crash. #90318

Closed
opened 2021-07-30 06:20:04 +02:00 by Alaska · 6 comments
Member

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-30 01:57, hash: ddcb6b1023
Worked: Unsure

Short description of error:
Dragging a asset from the asset browser while the thumbnail is still loading results in a crash. Here's the crash log:
Asset browser thumbnail crash.txt
2021-07-30 15-52-30.mp4

Exact steps for others to reproduce the error:

  1. Create a asset library with a "large" number of assets. By "large", I mean you have enough assets to make the loading of all the assets + thumbnails a longish process. For example I have a asset library with 60 cloud objects, or 60 materials. I will provide a .zip containing a collection of .blend files you can add to your asset library for use in triaging this bug. Custom thumbnails seems to make the thumbnail loading process slower and so the bug is easier to reproduce with custom thumbnails.
  2. Open a new .blend file.
  3. Open the asset browser and open your library with the assets.
  4. As the assets thumbnails are loading, click on drag on one of the assets as if you were going to add it to your viewport. Blender should crash.

Asset Library.zip

**System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-30 01:57, hash: `ddcb6b1023` Worked: Unsure **Short description of error:** Dragging a asset from the asset browser while the thumbnail is still loading results in a crash. Here's the crash log: [Asset browser thumbnail crash.txt](https://archive.blender.org/developer/F10246691/Asset_browser_thumbnail_crash.txt) [2021-07-30 15-52-30.mp4](https://archive.blender.org/developer/F10246693/2021-07-30_15-52-30.mp4) **Exact steps for others to reproduce the error:** 1. Create a asset library with a "large" number of assets. By "large", I mean you have enough assets to make the loading of all the assets + thumbnails a longish process. For example I have a asset library with 60 cloud objects, or 60 materials. I will provide a .zip containing a collection of .blend files you can add to your asset library for use in triaging this bug. Custom thumbnails seems to make the thumbnail loading process slower and so the bug is easier to reproduce with custom thumbnails. 2. Open a new .blend file. 3. Open the asset browser and open your library with the assets. 4. As the assets thumbnails are loading, click on drag on one of the assets as if you were going to add it to your viewport. Blender should crash. [Asset Library.zip](https://archive.blender.org/developer/F10246690/Asset_Library.zip)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce the crash on master: 5116b7a4c2

 	blender.exe!UI_fontstyle_draw_simple(const uiFontStyle * fs, float x, float y, const unsigned char * str, const unsigned char * col) Line 314	C
 	blender.exe!wm_drags_draw(bContext * C, wmWindow * win, rcti * rect) Line 592	C
 	blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 852	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 871	C
 	blender.exe!wm_draw_update(bContext * C) Line 1067	C
 	blender.exe!WM_main(bContext * C) Line 654	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C
Can reproduce the crash on master: `5116b7a4c2` ``` blender.exe!BLF_draw(int fontid, const unsigned char * str, unsigned __int64 len) Line 544 C blender.exe!UI_fontstyle_draw_simple(const uiFontStyle * fs, float x, float y, const unsigned char * str, const unsigned char * col) Line 314 C blender.exe!wm_drags_draw(bContext * C, wmWindow * win, rcti * rect) Line 592 C blender.exe!wm_draw_window_onscreen(bContext * C, wmWindow * win, int view) Line 852 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 871 C blender.exe!wm_draw_update(bContext * C) Line 1067 C blender.exe!WM_main(bContext * C) Line 654 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C ```

This issue was referenced by eb2a6f454b

This issue was referenced by eb2a6f454bd07442d16001e25dcf407d4e8f7533
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-07-30 16:02:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90318
No description provided.