Fix T90318: Dragging asset while Asset Browser is still loading crashes

This partially reverts cb0b017d8f51: We can't store the asset handle in
the drag data, because the file pointer it wraps may be freed as the
Asset Browser generates its file list.