source/blender/windowmanager/intern/wm_dragdrop.c
@@ -42,8 +42,6 @@
 #include "BKE_idtype.h"
 #include "BKE_lib_id.h"
 
-#include "ED_asset.h"
-
 #include "GPU_shader.h"
 #include "GPU_state.h"
 #include "GPU_viewport.h"
@@ -198,7 +196,6 @@ void WM_drag_data_free(int dragtype, void *poin)
   /* Not too nice, could become a callback. */
   if (dragtype == WM_DRAG_ASSET) {
     wmDragAsset *asset_drag = poin;
-    MEM_SAFE_FREE(asset_drag->asset_handle);
     MEM_freeN((void *)asset_drag->path);
   }
   MEM_freeN(poin);
@@ -376,14 +373,13 @@ wmDragAsset *WM_drag_get_asset_data(const wmDrag *drag, int idcode)
   }
 
   wmDragAsset *asset_drag = drag->poin;
-  ID_Type idtype = ED_asset_handle_get_id_type(asset_drag->asset_handle);
-  return (ELEM(idcode, 0, (int)idtype)) ? asset_drag : NULL;
+  return (ELEM(idcode, 0, asset_drag->id_type)) ? asset_drag : NULL;
 }
 
 static ID *wm_drag_asset_id_import(wmDragAsset *asset_drag)
 {
-  const char *name = ED_asset_handle_get_name(asset_drag->asset_handle);
-  ID_Type idtype = ED_asset_handle_get_id_type(asset_drag->asset_handle);
+  const char *name = asset_drag->name;
+  ID_Type idtype = asset_drag->id_type;
 
   switch ((eFileAssetImportType)asset_drag->import_type) {
     case FILE_ASSET_IMPORT_LINK:
@@ -449,8 +445,7 @@ void WM_drag_free_imported_drag_ID(struct Main *bmain, wmDrag *drag, wmDropBox *
     return;
   }
 
-  ID_Type idtype = ED_asset_handle_get_id_type(asset_drag->asset_handle);
-  ID *id = BKE_libblock_find_name(bmain, idtype, name);
+  ID *id = BKE_libblock_find_name(bmain, asset_drag->id_type, name);
   if (id) {
     BKE_id_delete(bmain, id);
   }
@@ -484,7 +479,7 @@ static const char *wm_drag_name(wmDrag *drag)
     }
     case WM_DRAG_ASSET: {
       const wmDragAsset *asset_drag = WM_drag_get_asset_data(drag, 0);
-      return ED_asset_handle_get_name(asset_drag->asset_handle);
+      return asset_drag->name;
     }
     case WM_DRAG_PATH:
     case WM_DRAG_NAME:
